Fix: `ExtensionDetails` permissions spacing

--- a/src/modules/dashboard/components/Extensions/ExtensionDetails.css
+++ b/src/modules/dashboard/components/Extensions/ExtensionDetails.css
@@ -55,6 +55,14 @@
   margin-top: 30px;
 }
 
+.permissions div {
+  margin-right: 7px;
+}
+
+.permissions div:last-child {
+  margin-right: 0px;
+}
+
 .buttonUninstall {
   margin-top: 10px;
   text-align: right;
